[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9.0"
default-features = false
features = ["napi-6"]

[dependencies]
cidr = "0.2.0"